logs/Slang/generated/hdlconv/hdlconvertor_p731.sv.log
name: hdlconvertor_p731
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p731.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p731.sv:14:10: error: use of undeclared identifier 'LOG2'
  logic [LOG2(DEPTH):0] depth;
         ^~~~
